tests/testfiles/valid/arithmetics/multiplication.c
int main(){
    int d = (2 * (4 + 3)) - ((5 - 2) * (6 + 1));
    return d;
}