tests/testfiles/invalid/basic/variable_redeclaration.c
int main() {
    int x = 5;
    int x = 3;
    return x;
}